--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,7 @@ jobs:
         with:
           command: c
           cwd: "./"
-          files: |
-            backend/
-            frontend/dist/
-            captain-definition
+          files: .  # Include the entire repository
           outPath: deploy.tar
 
       - name: Deploy App to CapRover
