--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
         node-version: [18.x]
 
     steps:
+      - name: List all environment variables
+        run: printenv
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -25,6 +27,7 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run test --if-present
+      
 
       - uses: a7ul/tar-action@v1.1.0
         with:
